[tool.poetry]
name = "repl_python3_page"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"
Flask = "^2.0.1"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
