[tool.poetry]
name = "repl_python3_Page"
version = "0.1.0"
description = ""
authors = ["Filiprar <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonify = "^0.5"
WTForms = "^2.3.3"
Flask = "^2.0.2"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.15.1"
email_validator = "^1.1.3"
appmap = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
