[tool.poetry]
name = "page"
version = "0.1.0"
description = ""
authors = ["Filiprar <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Bcrypt = "^1.0.1"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^2.5.1"
jsonify = "^0.5"
Flask-WTF = "^1.0.1"
email-validator = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
